--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="HEAD">
-            <img src="mirroir.jpg" alt="mirroir !" width="128"> 
+            <img src="mirroir.jpg" alt="mirroir !" height="128"> 
             <h1 class="mess">BOTS</h1>
             <h1 class="terminal">BOTSU.FR</h1>
         </div>
