--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
                 <li><a href="https://music.youtube.com/playlist?list=OLAK5uy_lrxMPfuwk-8KXFJoHnj5jAPOh4thOGkZM&si=YI1edd9Fb34-JpKE">Soberanía</a></li>
                 <li><a href="https://music.youtube.com/playlist?list=PLnz0IWlXHnxoy_N6i_4QqwWXEFHLHHtfs&si=fBT-Uzz2BziJq4vm">Breakcore</a></li>
                 <li><a href="https://music.youtube.com/playlist?list=PLnz0IWlXHnxoT7KUpzQti05ExXpqKMBVj&si=77C9UV0LhPnnFq2l">BORN TO LOSE</a></li>
-                <li><a href="https://youtu.be/1ieNfIk3Ruo?si=e9kuzM4OMtfuVhEu">🔥 4K HDR - 12 Hours REALTIME Fireplace - Fire Burning Video & Crackling Sounds - NO LOOP - Ultra HD</a></li>
-                <li><a href="https://youtu.be/RnnctM5Rf9I?si=mw4uFGqCYl1-dkiW">🐠 Minecraft Soothing Scenes – Relaxing Aquarium</a></li>
-                <li><a href="https://youtu.be/naz_RVh48vg?si=Eu7dQFT91YxDa-Lq">🚗 [ Driving Japan ] Go to Mount Fuji and the lakes around it. Enjoy the Mt. Fuji every angle.　富士山ドライブ</a></li>
-                <li><a href="https://youtu.be/eHxbMa2RVTQ?si=TR5RSWj8-VqTNppu">🌊 Coral Reef Aquarium - 4K HDR 60 fps - no loop</a></li>
+                <li><a href="https://youtu.be/1ieNfIk3Ruo?si=e9kuzM4OMtfuVhEu">4K HDR - 12 Hours REALTIME Fireplace - Fire Burning Video & Crackling Sounds - NO LOOP - Ultra HD</a></li>
+                <li><a href="https://youtu.be/RnnctM5Rf9I?si=mw4uFGqCYl1-dkiW">Minecraft Soothing Scenes – Relaxing Aquarium</a></li>
+                <li><a href="https://youtu.be/naz_RVh48vg?si=Eu7dQFT91YxDa-Lq">[ Driving Japan ] Go to Mount Fuji and the lakes around it. Enjoy the Mt. Fuji every angle.　富士山ドライブ</a></li>
+                <li><a href="https://youtu.be/eHxbMa2RVTQ?si=TR5RSWj8-VqTNppu">Coral Reef Aquarium - 4K HDR 60 fps - no loop</a></li>
+                <li><a href="https://youtu.be/w-VlBV4hmcE?si=I3VMPVtga58UyYat">🌊 𝘣𝘺 𝘵𝘩𝘦 𝘳𝘪𝘷𝘦𝘳𝘴𝘪𝘥𝘦... 𝘮𝘰𝘴𝘵 𝘳𝘦𝘭𝘢𝘹𝘪𝘯𝘨 𝘢𝘯𝘪𝘮𝘢𝘭 𝘤𝘳𝘰𝘴𝘴𝘪𝘯𝘨 𝘮𝘶𝘴𝘪𝘤 (𝘴𝘭𝘰𝘸𝘦𝘥 + 𝘳𝘦𝘷𝘦𝘳𝘣 + 𝘳𝘪𝘷𝘦𝘳 𝘢𝘮𝘣𝘪𝘢𝘯𝘤𝘦)</a></li>
             </ul>
         </div>
     </div>
@@ -76,25 +77,35 @@
             <h2 class="rituels">Rituels</h2>
             <ul>
                 <li><p class="heure">REVEIL</p></li>
-                <li><p>Se lever</p></li>
-                <li><p>Aller au Toilette</p></li>
-                <li><p>Nourrir Petit Chat</p></li>
-                <li><p>Prendre les Médicaments</p></li>
-                <li><p>Prendre un Café</p></li>
-                <li><p>Allumer l'ordinateur</p></li>
-                <li><p>Allumer la radio</p></li>
-                <li><p>s'Habiller</p></li>
-                <li><p>Faire la Vaisselle</p></li>
+                <li><p>* Se lever</p></li>
+                <li><p>* Aller au Toilette</p></li>
+                <li><p>* Nourrir Petit Chat</p></li>
+                <li><p>* Prendre les Médicaments</p></li>
+                <li><p>* Prendre un Café</p></li>
+                <li><p>* Allumer l'ordinateur</p></li>
+                <li><p>* Allumer la radio</p></li>
+                <li><p>* s'Habiller</p></li>
+                <li><p>* Ouvrir les rideaux</p></li>
+                <li><p>* S'étirer doucement</p></li>
+                <li><p>* Faire la Vaisselle</p></li>
+                <li><p>* Nourrir Petit Chat</p></li>
 
                 <li><p class="heure">APRES MANGER</p></li>
-                <li><p>Ecrire dans le journal</p></li>            
+                <li><p>* Ecrire dans le journal</p></li>  
+                <li><p>* Faire un petit rangement express</p></li> 
+                <li><p>* Nourrir Petit Chat</p></li>
+                <li><p>* Noter les courses à faire</p></li>
 
                 <li><p class="heure">FATIGUER</p></li>
-                <li><p>Aller au Toilette</p></li>
-                <li><p>Se brosser les dents</p></li>
-                <li><p>Eteindre la radio</p></li>
-                <li><p>Eteindre l'ordinateur</p></li>
-                <li><p>Se Coucher</p></li>
+                <li><p>* Nourrir Petit Chat</p></li>
+                <li><p>* Jeter la poubelles ?</p></li>
+                <li><p>* Aller au Toilette</p></li>
+                <li><p>* Se brosser les dents</p></li>
+                <li><p>* Fermer les rideaux</p></li>
+                <li><p>* Eteindre la radio</p></li>
+                <li><p>* Eteindre l'ordinateur</p></li>
+                <li><p>* Dire Bonne nuit a Petit Chat</p></li>
+                <li><p>* Se Coucher</p></li>
             </ul>
         </div>
     </body>
