--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                 <li><p>* Fermer les rideaux</p></li>
                 <li><p>* Eteindre la radio</p></li>
                 <li><p>* Eteindre l'ordinateur</p></li>
+                <li><p>* Se déshabiller</p></li>
                 <li><p>* Dire Bonne nuit a Petit Chat</p></li>
                 <li><p>* Se Coucher</p></li>
             </ul>
