--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                 <li><a href="https://www.twitch.tv/">Twitch</a></li>
                 <li><a href="https://www.ovh.com/manager/">OVH</a></li>
                 <li><a href="https://koka99.itch.io/">Itch.io</a></li>
+                <li><a href="https://www.ebay.fr/">ebay</a></li>
+                <li><a href="https://www.amazon.fr/">amazon</a></li>
+                <li><a href="https://www.topachat.com/">topachat</a></li>
+                
             </ul>
         </div>
 
@@ -76,6 +80,7 @@
         <div class="rituels">
             <h2 class="rituels">Rituels</h2>
             <ul>
+                <li> <img src="immeuble.jpg" alt="immeuble !" width="512px" /></li>
                 <li><p class="heure">REVEIL</p></li>
                 <li><p>* Se lever</p></li>
                 <li><p>* Aller au Toilette</p></li>
@@ -88,14 +93,14 @@
                 <li><p>* Ouvrir les rideaux</p></li>
                 <li><p>* S'étirer doucement</p></li>
                 <li><p>* Faire la Vaisselle</p></li>
+                <li><p>* Course ?</p></li>
                 <li><p>* Nourrir Petit Chat</p></li>
-
+                <li> <img src="DSC_0015.jpg" alt="Photos !" width="512px" /></li>
                 <li><p class="heure">APRES MANGER</p></li>
                 <li><p>* Ecrire dans le journal</p></li>  
                 <li><p>* Faire un petit rangement express</p></li> 
                 <li><p>* Nourrir Petit Chat</p></li>
-                <li><p>* Noter les courses à faire</p></li>
-
+                <li> <img src="shroom.png" alt="Shrooms !" width="512px" /></li>
                 <li><p class="heure">FATIGUER</p></li>
                 <li><p>* Nourrir Petit Chat</p></li>
                 <li><p>* Jeter la poubelles ?</p></li>
