--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
             <ul>
                 <li><a class="Pseudo" href="photos">photographies</a></li>
                 <li><a class="Pseudo" href="https://koka99.itch.io/">Itch.io</a></li>
-                <li><a class="Pseudo" href="https://github.com/">Github</a></li>
+                <li><a class="Pseudo" href="https://github.com/cnstiout">Github</a></li>
+                <li><a class="Pseudo" href="contact.html">Envoyer un Mail</a></li>
             </ul>
             
             
