--- a/index.html
+++ b/index.html
@@ -34,18 +34,21 @@
                 <li><a href="https://chat.openai.com/">ChatGPT</a></li>
                 <li><a>_________________</a></li>
                 <li><a href="https://www.minecraft-france.fr/">Minecraft-France</a></li>
+                <li><a href="https://velvetyne.fr/">Velvetyne</a></li>
                 <li><a>_________________</a></li>
                 <li><a href="https://www.ovh.com/manager/">OVH</a></li>
                 <li><a href="https://www.ebay.fr/">ebay</a></li>
                 <li><a href="https://www.amazon.fr/">amazon</a></li>
                 <li><a href="https://www.topachat.com/">topachat</a></li>
                 <li><a>_________________</a></li>
+                <li><a href="https://bsky.app/">Bluesky</a></li>
                 <li><a href="https://www.youtube.com/">Youtube</a></li>
                 <li><a href="https://www.twitch.tv/">Twitch</a></li>
             </ul>
             
-             <h3>admin<img src="images/player_Knockout.gif"></h3>
+             <h3>admin</h3>
             <ul>
+                <li><img src="images/player_Knockout.gif"></li>
                 <li><a href="https://ameliconnect.ameli.fr/">Améli</a></li>
                 <li><a href="https://www.impots.gouv.fr/">Impots</a></li>
                 <li><a href="https://www.artistes-auteurs.urssaf.fr/">Urssaf</a></li>
