--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
                 <li><a href="https://particuliers.engie.fr/">ENGIE</a></li>
             </ul>
             
+             <h3>Server</h3>
+                <input type="text" id="ip" value="82.67.30.166:25565" readonly onclick="this.select();">
+
+            
         </div>
 
         <!-- Bloc pseudo et outils -->
