--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div class="rituels">
             <h2 class="rituels">La Journée</h2>
             <ul>
-                <li> <img src="images/immeuble.jpg" alt="immeuble !" width="512px" /></li>
+                <li> <img class="rituels" src="images/immeuble.jpg" alt="immeuble !" width="512px" /></li>
                 <li><p class="heure">REVEIL</p></li>
                 <li><p>* Se lever</p></li>
                 <li><p>* Aller au Toilette</p></li>
@@ -208,7 +208,7 @@
                 <li><p>* Faire la Vaisselle</p></li>
                 <li><p>* Course ?</p></li>
                 <li><p>* Nourrir Petit Chat</p></li>
-                <li> <img src="images/DSC_0015.jpg" alt="Photos !" width="512px" /></li>
+                <li> <img class="rituels" src="images/DSC_0015.jpg" alt="Photos !" width="512px" /></li>
                 <li><p class="heure">APRES MANGER</p></li>
                 <li><p>* Ecrire dans le journal</p></li>
                 <li><p>* Nettoyage rapide de la cuisine</p></li>
@@ -217,7 +217,7 @@
                 <li><p>* Aller au Toilette</p></li>
                 <li><p>* Faire un petit rangement express</p></li> 
                 <li><p>* Nourrir Petit Chat</p></li>
-                <li> <img src="images/shroom.png" alt="Shrooms !" width="512px" /></li>
+                <li> <img class="rituels" src="images/shroom.png" alt="Shrooms !" width="512px" /></li>
                 <li><p class="heure">FATIGUER</p></li>
                 <li><p>* Nourrir Petit Chat</p></li>
                 <li><p>* Jeter la poubelles ?</p></li>
