--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
             <h2 class="albums">NOTICE</h2>
             <ul>
                 <li><p class="Biographie">Artiste autodidacte, je développe une pratique entre photographie, peinture et dispositifs numériques. </p></li>
-                <li><p class="Biographie">Mes photos capturent des matières altérées ou brillantes (métal, plastique, verre, eau), comme traces fragiles d’un monde en transformation.</p></li>
-                <li><p class="Biographie"> Ma peinture, plus brutale, traduit des états intérieurs liés au deuil, à la solitude ou à la colère.</p></li>
-                <li><p class="Biographie"> À travers installations interactives et écritures en ligne, j’interroge ce qu’Internet change dans les rapports entre générations, dans la mémoire collective et l’intime. </p></li>
+                <li><p class="Biographie">Mes photos explorent les matières altérées ou brillantes (métal, verre, eau), témoins de l’usure du monde.</p></li>
+                <li><p class="Biographie">Ma peinture exprime des émotions brutes liées au deuil, à la solitude et à la colère. </p></li>
+                <li><p class="Biographie">J’utilise les dispositifs numériques pour questionner l’impact d’Internet sur les liens intergénérationnels, la mémoire collective et l’intime. </p></li>
                 <li><p class="Biographie">Mes œuvres se répondent et circulent entre ces supports, tissant un lien entre expression instinctive et observation sensible. </p></li>
-                <li><p class="Biographie">Je cherche à faire exister une présence, là où le langage, la distance ou le silence empêchent le contact.</p></li>
+                <li><p class="Biographie">Je cherche à rendre tangible ce qui nous relie encore, au-delà des ruptures, des distances, des langues.</p></li>
             </ul>        
         </div>
         <div>
