--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <li><a href="https://franime.fr/">Anime</a></li>
                 <li><a>_________________</a></li>
                 <li><a href="https://www.minecraft-france.fr/">Minecraft-France</a></li>
+                <li><a href="https://minecraft.wiki/">Minecraft wiki</a></li>
                 <li><a href="https://velvetyne.fr/">Velvetyne</a></li>
                 <li><a href="https://fr.pinterest.com/">Pinterest</a></li>
                 <li><a>_________________</a></li>
@@ -81,32 +82,17 @@
                 <li><a  href="https://github.com/cnstiout">Github</a></li>
                 <li><a  href="contact.html">MonMail</a></li>
             </ul>
-            <img src="images/IMG_8637.jpg" alt="mirroir !" height="200" />
+            <img src="images/IMG_2546.jpg"alt="mirroir !" height="200" />
         </div>
         <div class="horaire">
             <h2>HELLO</h2>
             <ul>
                 <li><span id="clock"></span></li>
             </ul>
-            <h2>WORLD</h2>
-            <ul>
-                <li><p class="semaine"><img src="images/player_Attack.gif">LUNDI</p></li>
-                <li><p class="semaine">* Poubelle noires</p></li>
-                <li><p class="semaine"><img src="images/player_Run.gif">MARDI</p></li>
-                <li><p class="semaine">* Psycologue</p></li>
-                <li><p class="semaine">* Faire une lessive</p></li>
-                <li><p class="semaine"><img src="images/player_Crouch.gif">MERCREDI</p></li>
-                <li><p class="semaine">* CCAS</p></li>
-                <li><p class="semaine">* Poubelle blanches</p></li>
-                <li><p class="semaine"><img src="images/player_Jump.gif">JEUDI</p></li>
-                <li><p class="semaine">* Faire une liste de course</p></li>
-                <li><p class="semaine"><img src="images/player_Pull.gif">VENDREDI</p></li>
-                <li><p class="semaine">* Auto école</p></li>
-                <li><p class="semaine">* Poubelle noires</p></li>
-                <li><p class="semaine"><img src="images/player_Push.gif">SAMEDI</p></li>
-                <li><p class="semaine">* Marché</p></li>
-                <li><p class="semaine"><img src="images/player_Hit.gif">DIMANCHE</p></li>
-            </ul>
+            <div>
+        <h2 id="calendrier">WORLD</h2>
+        <div id="calendar" class="calendar-grid"></div>
+        </div>
         </div>
         <!-- Bloc musique / playlist -->
         <div>
@@ -129,6 +115,17 @@
                 <li><img src="images/pingu_smaller_face.png" width="200" ></li>
             </ul>
         </div>
+        
+         <div>
+            <h2 class="albums">Recettes</h2>
+            <ul>
+                <li><p><span class="rotate-letter">*</span> Poulet sauce crème</p></li>
+                <li><p><span class="rotate-letter">*</span> Pelminis</p></li>
+                <li><p><span class="rotate-letter">*</span> Burger NY</p></li>
+                <li><p><span class="rotate-letter">*</span> Gratin </p></li>
+            </ul>
+        </div>
+        
         <div class="bordereau">
             <div id="message-scroll" class="scroll-text">Bonjour ! 🌞</div>
         </div>
